--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-helmet": "^5.2.0",
+    "react-responsive-carousel": "^3.1.51",
     "uuid": "^3.2.1"
   },
   "keywords": [
@@ -46,6 +47,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.11.2",
     "prettier": "^1.15.3"
   }
 }
