Add ability to create gallery posts

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -15,7 +15,7 @@ collections:
   - name: "gallery_photos"
     label: "Gallery Photos"
     folder: "src/pages/gallery"
-    create: false
+    create: true
     slug: "{{slug}}"
     fields:
       - {
