--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -25,9 +25,14 @@ collections:
           default: "gallery-post",
         }
       - { label: "Title", name: "title", widget: "string" }
-      - { label: "Publish Date", name: "date", widget: "datetime" }
       - { label: "Description", name: "description", widget: "text" }
       - { label: "Featured Image", name: "featuredimage", widget: image }
+      - {
+          label: "Publish Date",
+          name: "date",
+          widget: "datetime",
+          required: false,
+        }
 
   - name: "reviews"
     label: "Reviews"
