--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -82,6 +82,28 @@ collections:
       - { label: "Body", name: "body", widget: "markdown" }
       - { label: "Tags", name: "tags", widget: "list" }
 
+  - name: "fishingblog"
+    label: "Fishing Blog"
+    folder: "src/pages/fishing-blog"
+    create: true
+    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
+    fields:
+      - {
+          label: "Template Key",
+          name: "templateKey",
+          widget: "hidden",
+          default: "fishingblog-post",
+        }
+      - { label: "Title", name: "title", widget: "string" }
+      - { label: "Publish Date", name: "date", widget: "datetime" }
+      - { label: "Body", name: "body", widget: "markdown" }
+      - {
+          label: "Photos",
+          name: "photos",
+          widget: "list",
+          field: { label: Image, name: image, widget: image },
+        }
+
   - name: "pages"
     label: "Pages"
     files:
